--- a/resources/sass/_custom.scss
+++ b/resources/sass/_custom.scss
@@ -458,6 +458,14 @@ select.dropdown:focus{
     padding: 12px 45px;
     color:#ffffff;
 }
+.btn-gray{
+    background: #D8D8D8;
+    border-radius: 5px;
+    color:#000000;
+    font-weight: 600;
+    padding: 12px 45px;
+    font-size: 16px;
+}
 
 .btn-gradient-green{
     background: linear-gradient(299.52deg, #0D9E7A 10.46%, #1AD444 77.77%);
@@ -551,6 +559,11 @@ select.dropdown:focus{
         .img-white{
             display: none;
         }
+        .icon{
+            margin-left: 10px;
+            width: 15px;
+            height: 8px;
+        }
     }
     .active{
         color:#ffffff !important;
@@ -561,6 +574,10 @@ select.dropdown:focus{
             display: block;
         }
     }
+}
+.icon{
+    width: 15px;
+    height: 8px;
 }
 
 .show{
