--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -7,10 +7,11 @@
 
 // Bootstrap
 // @import 'bootstrap/scss/bootstrap';
+
+@import "@fortawesome/fontawesome-free/css/all.css";
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 @import 'custom';
-@import 'test';
 
